tests/baselines/reference/unusedTypeParameters2.errors.txt
unusedTypeParameters2.ts(1,15): error TS6133: 'typeparameter1' is declared but its value is never read.
unusedTypeParameters2.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== unusedTypeParameters2.ts (2 errors) ====
    class greeter<typeparameter1, typeparameter2> {
                  ~~~~~~~~~~~~~~
!!! error TS6133: 'typeparameter1' is declared but its value is never read.
        private x: typeparameter2;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
        public function1() {
            this.x;
        }
    }